--- a/css/estilos.css
+++ b/css/estilos.css
@@ -11,5 +11,61 @@ main {
 
 body {
   background-color: #79c7ff;
+  font-family: Arial, Helvetica, sans-serif;
 }
 
+.cabecalho {
+  box-shadow: 0 0.3rem 0.2rem 0.1rem rgba(0, 0, 0, 0.1);
+  position: sticky;
+  top: 0;
+  left: 0;
+  background-color: #79c7ff;
+}
+
+.container {
+
+  display: flex;
+  flex-flow: wrap;
+  gap: 1rem;
+  justify-content: space-between;
+  align-items: center;
+  padding: 1rem;
+}
+
+.foto-cabecalho {
+  max-width: 100px;
+}
+
+.menu {
+  display: flex;
+  gap: 1.5rem;
+  list-style: none;
+  background-color: white;
+  border-radius: 1rem;
+  padding: 1rem;
+}
+
+a {
+  text-decoration: none;
+}
+
+.menu button {
+  border: 0;
+  border-radius: 1rem;
+  box-shadow: 0.1rem 0.1rem 0.1rem 0.1rem rgba(0, 0, 0, 0.13);
+  padding: 0.5rem;
+  background-color: #79c7ff;
+}
+
+.menu2 {
+  list-style: none;
+  display: none;
+}
+
+.menu a:link {}
+
+.menu a:visited {}
+
+.menu a:hover {}
+
+.menu a:active {}
