--- a/css/estilos.css
+++ b/css/estilos.css
@@ -2,15 +2,19 @@
   padding: 0;
   margin: 0;
   box-sizing: border-box;
-  font-size: 62.5%;
+}
+
+html {
+    font-size: 62.5%;
+
 }
 
 main {
-  background-color: #2eb2ff;
+  /*background-color: #2eb2ff;*/
 }
 
 body {
-  background-color: #79c7ff;
+  background-color: #f6f6f6;
   font-family: Arial, Helvetica, sans-serif;
 }
 
@@ -19,7 +23,7 @@ body {
   position: sticky;
   top: 0;
   left: 0;
-  background-color: #79c7ff;
+  background-color: #78c7ff;
 }
 
 .container {
@@ -55,6 +59,7 @@ a {
   box-shadow: 0.1rem 0.1rem 0.1rem 0.1rem rgba(0, 0, 0, 0.13);
   padding: 0.5rem;
   background-color: #79c7ff;
+  font-size: 1rem;
 }
 
 .menu2 {
@@ -69,3 +74,34 @@ a {
 .menu a:hover {}
 
 .menu a:active {}
+
+/*Seção Início*/
+
+.secao {
+  border: solid;
+  border-radius: 2rem;
+  min-width: 35rem;
+  max-width: 75%;
+  margin: 3rem auto;
+  padding: 3rem;
+ /* background-color: #2eb2ff;*/
+  background-image: linear-gradient(to bottom, #2eb2ff, #78ffef);
+  box-shadow: 0 0 0.5rem 0.4rem rgba(68, 113, 145, 0.23);
+}
+
+h1 {
+  text-align: center;
+  font-size: 3.2rem;
+}
+
+h2, h3 {
+  font-size: 2.4rem;
+}
+
+p, em, strong {
+  font-size: 1.6rem;
+}
+
+.secao h1, .secao h2, .secao p {
+  margin-bottom: 1rem;
+}
